add remote node

--- a/pos/vns_pos_index.conf
+++ b/pos/vns_pos_index.conf
@@ -3,6 +3,7 @@
     "wallet_private_key": "0x",
     "receiving_address": "0x",
     "registered_url":"http://247.10.10.10:8585",
-    "INTERVAL":"1200"
+    "INTERVAL":"1200",
+    "remote_node":{"available":0, "url":"http://x.x.x.x:8585"}
 }
 
