Add mail module

--- a/pos/vns_pos_index.conf
+++ b/pos/vns_pos_index.conf
@@ -2,8 +2,9 @@
     "wallet_address": "0x",
     "wallet_private_key": "0x",
     "receiving_address": "0x",
-    "registered_url":"http://247.10.10.10:8585",
+    "registered_url":"http://X.X.X.X:8585",
     "INTERVAL":"1200",
-    "remote_node":{"available":0, "url":"http://x.x.x.x:8585"}
+    "remote_node":{"available":0, "url":"http://X.X.X.X:8585"},
+    "email":{"available":0, "from":"XXX@qq.com", "to":"XXX@qq.com", "pd":"XXXX", "host":"smtp.qq.com"}
 }
 
